Revision history for {{$dist->name}}

{{$NEXT}}

0.04      2013-06-13 16:53:50 America/New_York
  - documentation

0.03      2013-06-13 16:25:05 America/New_York
  - undocumented host routes (experimental)
  - if you die in a callback server catches it and returns 503

0.02      2013-06-13 14:41:57 America/New_York
  - PlugAuth::Lite is now a Mojo app that uses PlugAuthLite plugin

0.01      2013-05-09 16:47:47 EST5EDT
  - initial version